# agentic-research

./: .env  .gitignore  .gitmodules  .graphify_ast.json  .graphify_detect.json  .graphify_python  .graphify_uncached.txt  AGENTS.md  CLAUDE.md  LICENSE  MAINTAINER.md  README.md  bk.env  demo_run.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  update-knowledge-base.bat
.ai/rules/: backtest-required-metrics.md  spec-review-agent-constraints.md  spec-review.md
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml  docker.yml  publish.yml
agentic_research/: __init__.py  __main__.py  cli.py  init_cmd.py  project_cmds.py  setup_cmd.py
agentic_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentic_research/templates/: credentials.yaml  docker-compose.global.yml  resume.bat  resume.sh  spec.md  start.bat  start.sh
artifacts/: loop_0_impl.txt  loop_0_report.md  loop_0_summary.md  loop_0_train.json  loop_1_impl.txt  loop_1_report.md  loop_1_summary.md  loop_1_train.json  loop_2_impl.txt  loop_2_report.md  loop_2_summary.md  loop_2_train.json
cli/: main.py
db/migrations/: 001_business_schema.sql
deploy/: .env  Dockerfile  docker-compose.local.yml  docker-compose.yml  schema.sql
docker/: .env  Dockerfile  docker-compose.global.yml  docker-compose.yml
docs/: AGENTIC_RESEARCH_SOP_ZH.md  AGENT_CONTEXT.md  DEV_CHECKLIST.md  LANGGRAPH_WORKFLOW.md  PLUGIN_SPEC.md  QA_MANUAL_TEST_GUIDE.md  RD_DEPLOYMENT_GUIDE.md  RESEARCH_WORKFLOW_DESIGN.md  STRATEGY_KNOWLEDGE_DESIGN.md  TODO.md  USER_GUIDE.md  USER_MANAGEMENT_PLAN_ZH.md  codex_advise.md
framework/: graph.py  llm_preflight.py  llm_providers.py  minio_client.py  notify.py  planka.py  plugin_interface.py  plugin_registry.py  spec_clarifier.py  spec_review_graph.py  tag_parser.py
framework/api/: server.py
framework/db/: connection.py  queries.py
graphify-out/: .graphify_chunk_00.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json
openspec/: config.yaml
templates/: resume.bat  resume.sh  spec.yaml  start.bat  start.sh
tests/: conftest.py  test_e2e_extract_metrics.py  test_e2e_poll_until.py  test_e2e_setup_card.py  test_freqtrade_integration.py  test_llm_providers.py  test_positive_flows.py  test_spec_review_replay.py
(+81 files in other folders)
