[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-research"
version = "0.3.0"
description = "Autonomous research workflow framework — Planka-driven, LangGraph-powered"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "minio>=7.2",
]

[project.scripts]
agentic-research = "cli.main:main"

[tool.setuptools.packages.find]
include = ["framework*", "projects*", "cli*", "deploy*"]

[tool.setuptools.package-data]
deploy = [
    "docker-compose.yml",
    "schema.sql",
    ".env",
]
