[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-research"
version = "0.3.0"
description = "Autonomous research workflow framework — Planka-driven, LangGraph-powered"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Willy Cheng", email = "willy.cheng@shoalter.com" },
]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "minio>=7.2",
]

[project.urls]
Homepage = "https://github.com/willy50414z/agentic-research"
Repository = "https://github.com/willy50414z/agentic-research"
Issues = "https://github.com/willy50414z/agentic-research/issues"

[project.scripts]
agentic-research = "cli.main:main"

[tool.setuptools.packages.find]
include = ["framework*", "projects*", "cli*", "deploy*"]

[tool.setuptools.package-data]
deploy = [
    "docker-compose.yml",
    "schema.sql",
    ".env",
]
